--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
-title: sterling loughmiller homepage
-#Sterling Loughmiller CS-HU250
+title: Sterling Loughmiller homepage
+# Sterling Loughmiller CS-HU250
 This site was built using [GitHub Pages](https://pages.github.com/xxtuftufxx/xxtuftufxx.github.io)
 <picture>
   <source media="(prefers-color-scheme: dark)" srcset="https://user-images.githubusercontent.com/25423296/163456776-7f95b81a-f1ed-45f7-b7ab-8fa810d529fa.png">
