--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,40 @@
 theme: jekyll-theme-slate
-title: Sterling Loughmiller homepage
-# Sterling Loughmiller CS-HU250
-This site was built using [GitHub Pages](https://pages.github.com/xxtuftufxx/xxtuftufxx.github.io)
+title: Sterling Loughmiller | Software Engineer
+
+# 👋 Welcome to My Homepage
+
+This site was built using [GitHub Pages](https://pages.github.com/) and serves as my central hub for showcasing my work, projects, and experience.
+
 <picture>
   <source media="(prefers-color-scheme: dark)" srcset="https://user-images.githubusercontent.com/25423296/163456776-7f95b81a-f1ed-45f7-b7ab-8fa810d529fa.png">
   <source media="(prefers-color-scheme: light)" srcset="https://user-images.githubusercontent.com/25423296/163456779-a8556205-d0a5-45e2-ac17-42d089e3c3f8.png">
-  <img alt="Shows an illustrated sun in light color mode and a moon with stars in dark color mode." src="https://user-images.githubusercontent.com/25423296/163456779-a8556205-d0a5-45e2-ac17-42d089e3c3f8.png">
+  <img alt="Day/night themed logo" src="https://user-images.githubusercontent.com/25423296/163456779-a8556205-d0a5-45e2-ac17-42d089e3c3f8.png" />
 </picture>
 
--[x] Completed a github page for CS-HU250 Hurray!!
+---
+
+## 🚀 Featured Project
+
+🔗 [**Home Inventory App (PWA)**](https://sloughmiller.github.io/inventory/)
+
+A mobile-ready progressive web app to track household items, categories, locations, and conditions — built with FastAPI, PostgreSQL, and React + Vite PWA.
+
+---
+
+## 📄 Resume
+
+📥 [Download Resume (PDF)](https://sloughmiller.github.io/resume.pdf)
+
+---
+
+## 💼 About Me
+
+I'm an experienced engineer with 10+ years of hands-on systems automation and manufacturing leadership, now focused on backend development, database engineering, and building scalable, real-world software solutions.  
+Currently finishing my B.S. in Computer Science with a focus in cybersecurity.
+
+---
+
+## 🔗 Contact
+
+- 📧 Email: [sterlingloughmiller@gmail.com](mailto:sterlingloughmiller@gmail.com)  
+- 💼 LinkedIn: [linkedin.com/in/sterling-loughmiller](https://www.linkedin.com/in/sterling-loughmiller)
