--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
+---
 theme: jekyll-theme-slate
 title: Sterling Loughmiller | Software Engineer
+---
 
 # 👋 Welcome to My Homepage
 
@@ -23,7 +25,8 @@ A mobile-ready progressive web app to track household items, categories, locatio
 
 ## 📄 Resume
 
-📥 [Download Resume (PDF)](https://sloughmiller.github.io/resume.pdf)
+📥 [**View HTML Resume**](https://sloughmiller.github.io/resume-site/)  
+📄 [**Download Resume (PDF)**](https://sloughmiller.github.io/resume.pdf)
 
 ---
 
